--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
-Flask>=2.2
-pandas>=1.3
-numpy>=1.21
-joblib>=1.1
-Werkzeug>=2.2
-google-generativeai>=0.2
-gunicorn>=20.1
+Flask==2.3.3
+pandas==2.2.2
+numpy==1.26.4
+joblib==1.4.2
+scikit-learn==1.4.2
+Werkzeug==2.3.8
+google-generativeai==0.4.1
+smtplib3==1.0.2
+email-to==0.0.1
+gunicorn==21.2.0
