--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-Flask==2.3.3
-pandas==2.2.2
-numpy==1.26.4
-joblib==1.4.2
-scikit-learn==1.4.2
-Werkzeug==2.3.8
-google-generativeai==0.4.1
-smtplib3==1.0.2
-email-to==0.0.1
-gunicorn==21.2.0
+Flask
+pandas
+numpy
+joblib
+scikit-learn
+Werkzeug
+google-generativeai
+smtplib3
+email-to
+gunicorn
